<resources>
    <string name="app_name">E-Chat</string>
    <string name="default_web_client_id">smdproject-5758.apps.googleusercontent.com</string>


    <string name="post">To align the LottieAnimationView elements in the center of the LinearLayoutCompat, you can use the following properties:

    Set Gravity: Use the android:gravity="center" attribute in the LinearLayoutCompat to align all child views centrally.
    Match Parent Width and Height: Ensure that layout_width and layout_height are appropriately set for proper alignment.</string>
    <string name="amit_kumar">Amit Kumar</string>
    <string name="about">About</string>
    <string name="bio">Software Developer | Enthusiast | Learner</string>
    <string name="user_information">User Information</string>
    <string name="username_">Username:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="age">Age:</string>
    <string name="_21">21</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="_07_02_2003">07-02-2003</string>
    <string name="mobile">Mobile:</string>
    <string name="_91_9000000009">+91 9000000009</string>
    <string name="email">Email:</string>
    <string name="axxxxxxa_gmail_com">a@example.com</string>
    <string name="social_media">Social Media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>